--- a/examples/fargate-alb-single-container/example.yml
+++ b/examples/fargate-alb-single-container/example.yml
@@ -19,7 +19,7 @@ Resources:
     Type: 'AWS::CloudFormation::Stack'
     Properties:
       Parameters:
-        Email: 'email@domain.com' # replace with your email address to receive alerts
+        Email: 'tany.patil77@gmail.com' # replace with your email address to receive alerts
         # HttpsEndpoint: 'https://api.marbot.io/v1/endpoint/xyz' # or uncommnet and receive alerts in Slack or Microsoft Teams using marbot.io
       TemplateURL: './node_modules/@cfn-modules/alerting/module.yml'
   Vpc:
